kommenterade content div

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <img src="good-food2.jpg" alt="Good Food logo" style="border:10px solid white; border-radius:20px" /></a>
 
     </div>
-
+    //tmp
  <div id="content">
      <content> 
 
