Nu kommer ändringar till sex sidor

--- a/ReceptSidan1.html
+++ b/ReceptSidan1.html
@@ -9,7 +9,7 @@
 <body>
     <div id="pageContainer">
         <article class="article">
-            <a href="Mat.html" title="Return to the homepage" id="logo.jpg">
+            <a href="index.html" title="Return to the homepage" id="logo.jpg">
                 <img src="logo.jpg" alt="logo.jpg" />
             </a>
             <header>
@@ -51,7 +51,8 @@
                         Till garnering:
                         körvel, plockad -
                         salladslök, skivad
-                    </p></div>
+                    </p>
+                </div>
                 <div class="text3">
                     <p>
                         <h2>Gör så här:</h2>
