--- a/ReceptSidan4.html
+++ b/ReceptSidan4.html
@@ -9,7 +9,7 @@
 <body>
     <div id="pageContainer">
         <article class="article">
-            <a href="Mat.html" title="Return to the homepage" id="logo.jpg">
+            <a href="index.html" title="Return to the homepage" id="logo.jpg">
                 <img src="logo.jpg" alt="logo.jpg" />
             </a>
             <header>
@@ -50,7 +50,7 @@
                     500 g sardellfiléer
                     dill, plockad
                     körvel, plockad
-                    </p>
+                    
                 </div>
                 <div class="text3">
                     <p>
