Nu ser dem lite bätre ut

--- a/ReceptSidan1.html
+++ b/ReceptSidan1.html
@@ -20,7 +20,7 @@
             <nav>
                 <div class="mainMenuDiv"><a href="Mat.html">Mat</a></div>
                 <div class="mainMenuDiv"><a href="Aptitretare.html">Aptitretare</a></div>
-                <div class="mainMenuDiv"><a href="Dogens Ideer.html">Dagens Ideer</a></div>
+                <div class="mainMenuDiv"><a href="Efterrätt.html">Efterrätt</a></div>
                 <div class="mainMenuDiv"><a href="Om Oss.html">Om Oss</a></div>
             </nav>
             <div class="text">
