--- a/mat.html
+++ b/mat.html
@@ -20,16 +20,17 @@
             <nav>
                 <div class="mainMenuDiv"><a href="Mat.html">Mat</a></div>
                 <div class="mainMenuDiv"><a href="Aptitretare.html">Aptitretare</a></div>
-                <div class="mainMenuDiv"><a href="Dogens Ideer.html">Dagens Ideer</a></div>
-                <div class="mainMenuDiv"><a href="Om Oss.html">Om Oss</a></div>
+                <div class="mainMenuDiv"><a href="Efterrätt.html">Efterrätt</a></div>
+                <div class="mainMenuDiv"><a href="Omoss.html">Om Oss</a></div>
             </nav>
 
 
             <div class="pagecolumn">
                 <h2>Våra Recept:</h2>
                 <div class="listContainer">
+                    <a href="ReceptSidan1.html" class="Go to new page" id="ReceptSidan1" />
                     <div class="listItem">
-                        <a href="ReceptSidan1.html" class="Go to new page" id="ReceptSidan1" />
+
 
                         Rostad fläsklägg med bakad spetskål, lök, bondbönor och skummig örtbuljong
 
@@ -79,10 +80,10 @@
 
 
     <footer>
-        <p>Posted by: Hege Refsnes</p>
+        <p>Posted by: Exotiska Recept</p>
         <p>
             Contact information: <a href="mailto:someone@example.com">
-                someone@example.com
+                Exotiskarecept@hotmail.com
             </a>
         </p>
     </footer>
