--- a/ReceptSidan3.html
+++ b/ReceptSidan3.html
@@ -20,7 +20,7 @@
             <nav>
                 <div class="mainMenuDiv"><a href="Mat.html">Mat</a></div>
                 <div class="mainMenuDiv"><a href="Aptitretare.html">Aptitretare</a></div>
-                <div class="mainMenuDiv"><a href="Dogens Ideer.html">Dagens Ideer</a></div>
+                <div class="mainMenuDiv"><a href="Efterrätt.html">Efterrätt</a></div>
                 <div class="mainMenuDiv"><a href="Om Oss.html">Om Oss</a></div>
             </nav>
             <div class="text">
@@ -50,7 +50,7 @@
                     500 g sardellfiléer
                     dill, plockad
                     körvel, plockad
-                    
+
                 </div>
                 <div class="text3">
                     <p>
@@ -70,21 +70,24 @@
                     </p>
                     <p>
                         4. Ljumma på det brynta smöret och rör ner gräddfil och färskost, smaka
-                        av med citron och salt.</p>
-                       <p> 5. Lägg upp fisken med potatissalladen och ägg. Rippla gräddfilsdressingen
+                        av med citron och salt.
+                    </p>
+                    <p>
+                        5. Lägg upp fisken med potatissalladen och ägg. Rippla gräddfilsdressingen
                         över. Garnera med sardellfiléer, dill och körvel.
-                        Servera med extra dressing.</p>
-                    
+                        Servera med extra dressing.
+                    </p>
+
                 </div>
             </div>
 
         </article>
     </div>
     <footer>
-        <p>Posted by: Hege Refsnes</p>
+        <p>Posted by: Exotiska Recept</p>
         <p>
             Contact information: <a href="mailto:someone@example.com">
-                someone@example.com
+                Exotiskarecept@hotmail.com
             </a>
         </p>
     </footer>
