--- a/ReceptSidan4.html
+++ b/ReceptSidan4.html
@@ -20,7 +20,7 @@
             <nav>
                 <div class="mainMenuDiv"><a href="Mat.html">Mat</a></div>
                 <div class="mainMenuDiv"><a href="Aptitretare.html">Aptitretare</a></div>
-                <div class="mainMenuDiv"><a href="Dogens Ideer.html">Dagens Ideer</a></div>
+                <div class="mainMenuDiv"><a href="Efterrätt.html">Efterrätt</a></div>
                 <div class="mainMenuDiv"><a href="Om Oss.html">Om Oss</a></div>
             </nav>
             <div class="text">
@@ -50,7 +50,7 @@
                     500 g sardellfiléer
                     dill, plockad
                     körvel, plockad
-                    
+
                 </div>
                 <div class="text3">
                     <p>
@@ -84,10 +84,10 @@
         </article>
     </div>
     <footer>
-        <p>Posted by: Hege Refsnes</p>
+        <p>Posted by: Exotiska Recepts</p>
         <p>
             Contact information: <a href="mailto:someone@example.com">
-                someone@example.com
+                Exotiskarecept@hotmail.com
             </a>
         </p>
     </footer>
