--- a/ReceptSidan1.html
+++ b/ReceptSidan1.html
@@ -18,7 +18,7 @@
                 </h1>
             </header>
             <nav>
-                <div class="mainMenuDiv"><a href="Mat.html">Mat</a></div>
+                <div class="mainMenuDiv"><a href="Mat.html">Mat-Recept</a></div>
                 <div class="mainMenuDiv"><a href="Aptitretare.html">Aptitretare</a></div>
                 <div class="mainMenuDiv"><a href="Efterrätt.html">Efterrätt</a></div>
                 <div class="mainMenuDiv"><a href="Om Oss.html">Om Oss</a></div>
